crates/swc_ecma_parser/tests/test262-error-references/fail/794032efdfb20d41.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/794032efdfb20d41.js:1:2
  |
1 | (0, {a = 0}) => 0
  |  ^

